--- a/shows/backend/.env
+++ b/shows/backend/.env
@@ -9,3 +9,4 @@ TWILIO_PHONE_NUMBER=+12312625389
 # Email credentials (for Nodemailer, using Gmail recommended)
 EMAIL_USER=kshitizvishwakarma2003@gmail.com
 EMAIL_PASS=depz kfhg dnmp sxww
+VITE_API_URL=https://show-sewa.onrender.com
