--- a/shows/backend/package.json
+++ b/shows/backend/package.json
@@ -19,7 +19,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
-    "nodemailer": "^7.0.5",
-    "twilio": "^5.7.3"
+    "nodemailer": "^7.0.5"
   }
 }
