--- a/shows/show sewa/package.json
+++ b/shows/show sewa/package.json
@@ -16,6 +16,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
